<?xml version="1.0"?>
<package>
  <name>bartendro_msgs</name>
  <version>0.1.0</version>
  <description>The bartendro_msgs package</description>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bartendro_msgs</url>

  <author email="namniart@gmail.com">Austin Hendrix</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
